Implementacion de rutas y visualizacion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="controls">
       <input type="text" id="search-input" placeholder="Buscar por ID (ej: 101) o Nombre..." />
       <button id="search-btn">Buscar</button>
+      
+      <button id="next-btn" disabled>Siguiente</button>
+      <span id="pagination-status"></span>
       <button id="clear-btn">Limpiar</button>
     </div>
 
